--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +196,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Let's explore some US bikeshare data!\n",
+      "Which city u wanna? (chicago, new york city, washington) :washington\n",
+      "Which month u wanna? (all, january, february, ... , june) :february\n",
+      "Which day u wanna? (all, monday, tuesday, ... sunday) :tuesday\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "The common month is : 2.0\n",
+      "The common day of week is : Tuesday\n",
+      "The common start hour is : 17.0\n",
+      "\n",
+      "This took 0.0019958019256591797 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "The common used start station is : Columbus Circle / Union Station\n",
+      "The common used end station is : Columbus Circle / Union Station\n",
+      "The frequent combination of start station and end station trip is : Columbus Circle / Union Station;8th & F St NE\n",
+      "\n",
+      "This took 0.009972572326660156 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "Total trip duration is : 4250758.633000002\n",
+      "Average trip duration is: 916.7044712098344\n",
+      "\n",
+      "This took 0.000995635986328125 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "Subscriber    4152\n",
+      "Customer       485\n",
+      "Name: User Type, dtype: int64\n",
+      "\n",
+      "This took 0.0009975433349609375 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Would you like to restart? Enter yes or no.\n",
+      "yes\n",
+      "Hello! Let's explore some US bikeshare data!\n",
+      "Which city u wanna? (chicago, new york city, washington) :new york city\n",
+      "Which month u wanna? (all, january, february, ... , june) :januray\n",
+      "\n",
+      "Please enter valid month\n",
+      "Which month u wanna? (all, january, february, ... , june) :january\n",
+      "Which day u wanna? (all, monday, tuesday, ... sunday) :all\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "The common month is : 1.0\n",
+      "The common day of week is : Thursday\n",
+      "The common start hour is : 8.0\n",
+      "\n",
+      "This took 0.004984378814697266 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "The common used start station is : Pershing Square North\n",
+      "The common used end station is : Pershing Square North\n",
+      "The frequent combination of start station and end station trip is : E 7 St & Avenue A;Cooper Square & E 7 St\n",
+      "\n",
+      "This took 0.0139617919921875 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "Total trip duration is : 19355610.0\n",
+      "Average trip duration is: 745.9384152921227\n",
+      "\n",
+      "This took 0.0020160675048828125 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "Subscriber    25009\n",
+      "Customer        810\n",
+      "Name: User Type, dtype: int64\n",
+      "Male      19350\n",
+      "Female     5480\n",
+      "Name: Gender, dtype: int64\n",
+      "The youngest birth year is : 1885.0 \n",
+      "The oldest birth year is : 2000.0 \n",
+      "The comoon birth yesr is : 1985.0\n",
+      "\n",
+      "This took 0.006954193115234375 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Would you like to restart? Enter yes or no.\n",
+      "no\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    while True:\n",
