--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_info(df):\n",
+    "    x = 0\n",
+    "    # Filter dataFrame because there's a hour , month, week_day we won't be print\n",
+    "    df2 = df.drop(['hour', 'month', 'day_of_week'], axis=1)\n",
+    "    while True:\n",
+    "        print(df2.iloc[x:x +5])\n",
+    "        x += 5\n",
+    "        asq = input('Would u like to viwe more individual data? (yes or no)')\n",
+    "        asq = asq.lower()\n",
+    "        if asq != 'yes':\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,97 +223,93 @@
      "output_type": "stream",
      "text": [
       "Hello! Let's explore some US bikeshare data!\n",
-      "Which city u wanna? (chicago, new york city, washington) :washington\n",
-      "Which month u wanna? (all, january, february, ... , june) :february\n",
-      "Which day u wanna? (all, monday, tuesday, ... sunday) :tuesday\n",
+      "Which city u wanna? (chicago, new york city, washington) :chicago\n",
+      "Which month u wanna? (all, january, february, ... , june) :june\n",
+      "Which day u wanna? (all, monday, tuesday, ... sunday) :sunday\n",
       "------------------------------------------------------------\n",
       "\n",
       "Calculating The Most Frequent Times of Travel...\n",
       "\n",
-      "The common month is : 2.0\n",
-      "The common day of week is : Tuesday\n",
-      "The common start hour is : 17.0\n",
+      "The common month is : 6\n",
+      "The common day of week is : Sunday\n",
+      "The common start hour is : 15\n",
       "\n",
-      "This took 0.0019958019256591797 seconds.\n",
+      "This took 0.0029497146606445312 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating The Most Popular Stations and Trip...\n",
       "\n",
-      "The common used start station is : Columbus Circle / Union Station\n",
-      "The common used end station is : Columbus Circle / Union Station\n",
-      "The frequent combination of start station and end station trip is : Columbus Circle / Union Station;8th & F St NE\n",
+      "The common used start station is : Streeter Dr & Grand Ave\n",
+      "The common used end station is : Streeter Dr & Grand Ave\n",
+      "The frequent combination of start station and end station trip is : Streeter Dr & Grand Ave;Lake Shore Dr & North Blvd\n",
       "\n",
-      "This took 0.009972572326660156 seconds.\n",
+      "This took 0.006981372833251953 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating Trip Duration...\n",
       "\n",
-      "Total trip duration is : 4250758.633000002\n",
-      "Average trip duration is: 916.7044712098344\n",
+      "Total trip duration is : 17630092\n",
+      "Average trip duration is: 1348.3817973231357\n",
       "\n",
-      "This took 0.000995635986328125 seconds.\n",
+      "This took 0.0019943714141845703 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating User Stats...\n",
       "\n",
-      "Subscriber    4152\n",
-      "Customer       485\n",
+      "Subscriber    7238\n",
+      "Customer      5837\n",
       "Name: User Type, dtype: int64\n",
-      "\n",
-      "This took 0.0009975433349609375 seconds.\n",
-      "----------------------------------------\n",
-      "\n",
-      "Would you like to restart? Enter yes or no.\n",
-      "yes\n",
-      "Hello! Let's explore some US bikeshare data!\n",
-      "Which city u wanna? (chicago, new york city, washington) :new york city\n",
-      "Which month u wanna? (all, january, february, ... , june) :januray\n",
-      "\n",
-      "Please enter valid month\n",
-      "Which month u wanna? (all, january, february, ... , june) :january\n",
-      "Which day u wanna? (all, monday, tuesday, ... sunday) :all\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "Calculating The Most Frequent Times of Travel...\n",
-      "\n",
-      "The common month is : 1.0\n",
-      "The common day of week is : Thursday\n",
-      "The common start hour is : 8.0\n",
-      "\n",
-      "This took 0.004984378814697266 seconds.\n",
-      "----------------------------------------\n",
-      "\n",
-      "Calculating The Most Popular Stations and Trip...\n",
-      "\n",
-      "The common used start station is : Pershing Square North\n",
-      "The common used end station is : Pershing Square North\n",
-      "The frequent combination of start station and end station trip is : E 7 St & Avenue A;Cooper Square & E 7 St\n",
-      "\n",
-      "This took 0.0139617919921875 seconds.\n",
-      "----------------------------------------\n",
-      "\n",
-      "Calculating Trip Duration...\n",
-      "\n",
-      "Total trip duration is : 19355610.0\n",
-      "Average trip duration is: 745.9384152921227\n",
-      "\n",
-      "This took 0.0020160675048828125 seconds.\n",
-      "----------------------------------------\n",
-      "\n",
-      "Calculating User Stats...\n",
-      "\n",
-      "Subscriber    25009\n",
-      "Customer        810\n",
-      "Name: User Type, dtype: int64\n",
-      "Male      19350\n",
-      "Female     5480\n",
+      "Male      4928\n",
+      "Female    2312\n",
       "Name: Gender, dtype: int64\n",
-      "The youngest birth year is : 1885.0 \n",
-      "The oldest birth year is : 2000.0 \n",
-      "The comoon birth yesr is : 1985.0\n",
+      "The youngest birth year is : 1906.0 \n",
+      "The oldest birth year is : 2004.0 \n",
+      "The comoon birth yesr is : 1990.0\n",
       "\n",
-      "This took 0.006954193115234375 seconds.\n",
+      "This took 0.005372285842895508 seconds.\n",
       "----------------------------------------\n",
+      "     Unnamed: 0          Start Time         End Time  Trip Duration  \\\n",
+      "18      1469705 2017-06-25 21:26:00  6/25/2017 21:33            434   \n",
+      "68      1341523 2017-06-18 16:17:00  6/18/2017 16:53           2205   \n",
+      "79      1462466 2017-06-25 15:09:00  6/25/2017 15:30           1282   \n",
+      "83      1104777 2017-06-04 12:14:00   6/4/2017 12:39           1512   \n",
+      "191     1454517 2017-06-25 08:38:00   6/25/2017 8:49            640   \n",
+      "\n",
+      "                Start Station                    End Station   User Type  \\\n",
+      "18      State St & Pearson St         Clark St & Schiller St  Subscriber   \n",
+      "68   Fairbanks Ct & Grand Ave              Adler Planetarium    Customer   \n",
+      "79       Paulina St & 18th St        Damen Ave & Chicago Ave    Customer   \n",
+      "83    Clark St & Armitage Ave  Lake Shore Dr & Diversey Pkwy  Subscriber   \n",
+      "191            Burnham Harbor     Fort Dearborn Dr & 31st St  Subscriber   \n",
+      "\n",
+      "     Gender  Birth Year  \n",
+      "18     Male      1987.0  \n",
+      "68      NaN         NaN  \n",
+      "79      NaN         NaN  \n",
+      "83   Female      1989.0  \n",
+      "191    Male      1967.0  \n",
+      "Would u like to viwe more individual data? (yes or no)yes\n",
+      "     Unnamed: 0          Start Time         End Time  Trip Duration  \\\n",
+      "239     1340146 2017-06-18 15:24:00  6/18/2017 15:43           1147   \n",
+      "254     1225949 2017-06-11 11:41:00  6/11/2017 11:47            365   \n",
+      "271     1331570 2017-06-18 06:20:00   6/18/2017 6:36            994   \n",
+      "364     1339761 2017-06-18 15:08:00  6/18/2017 15:27           1107   \n",
+      "372     1112185 2017-06-04 17:25:00   6/4/2017 17:41            947   \n",
+      "\n",
+      "                   Start Station                   End Station   User Type  \\\n",
+      "239  Lake Shore Dr & Belmont Ave         Michigan Ave & Oak St  Subscriber   \n",
+      "254      Broadway & Waveland Ave    Clarendon Ave & Gordon Ter  Subscriber   \n",
+      "271   Clarendon Ave & Gordon Ter  Stockton Dr & Wrightwood Ave  Subscriber   \n",
+      "364        Indiana Ave & 31st St                Burnham Harbor  Subscriber   \n",
+      "372   Lake Shore Dr & North Blvd      McClurg Ct & Illinois St  Subscriber   \n",
+      "\n",
+      "     Gender  Birth Year  \n",
+      "239    Male      1990.0  \n",
+      "254  Female      1991.0  \n",
+      "271    Male      1983.0  \n",
+      "364  Female      1989.0  \n",
+      "372  Female      1967.0  \n",
+      "Would u like to viwe more individual data? (yes or no)no\n",
       "\n",
       "Would you like to restart? Enter yes or no.\n",
       "no\n"
@@ -311,7 +326,7 @@
     "        station_stats(df)\n",
     "        trip_duration_stats(df)\n",
     "        user_stats(df)\n",
-    "\n",
+    "        print_info(df)\n",
     "        restart = input('\\nWould you like to restart? Enter yes or no.\\n')\n",
     "        if restart.lower() != 'yes':\n",
     "            break\n",
